--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@sidebase/nuxt-auth": "^0.6.3-alpha.1",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.2",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@vueuse/components": "^10.7.0",
+    "@vueuse/core": "^10.7.0"
   }
 }
