--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@nuxt/image": "^1.1.0",
+    "@pinia/nuxt": "^0.5.1",
     "@vueuse/components": "^10.7.0",
-    "@vueuse/core": "^10.7.0"
+    "@vueuse/core": "^10.7.0",
+    "pinia": "^2.1.7"
   }
 }
