--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
     "@nuxt/image": "^1.1.0",
     "@pinia/nuxt": "^0.5.1",
+    "@vee-validate/yup": "^4.12.2",
     "@vueuse/components": "^10.7.0",
     "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "vee-validate": "^4.12.2",
+    "yup": "^1.3.2"
   }
 }
