--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.2",
     "postcss": "^8.4.32",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.6",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
@@ -28,6 +29,7 @@
     "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
+    "tocbot": "^4.23.0",
     "vee-validate": "^4.12.2",
     "yup": "^1.3.2"
   }
