--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vueuse/components": "^10.7.0",
     "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
+    "google-oauth-gsi": "^4.0.0",
     "pinia": "^2.1.7",
     "tocbot": "^4.23.0",
     "vee-validate": "^4.12.2",
