--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.1.1",
     "@nuxt/image": "^1.1.0",
     "@pinia/nuxt": "^0.5.1",
     "@vee-validate/yup": "^4.12.2",
