--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@sidebase/nuxt-auth": "^0.6.3-alpha.1",
+    "@types/intl-tel-input": "^18.1.4",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.2",
     "postcss": "^8.4.32",
@@ -30,6 +31,7 @@
     "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
     "google-oauth-gsi": "^4.0.0",
+    "intl-tel-input": "^17.0.19",
     "pinia": "^2.1.7",
     "tocbot": "^4.23.0",
     "vee-validate": "^4.12.2",
