--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,11 @@
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
+    "baseUrl": "./",
     "paths" : {
-      "~/*" : ["./*"]
+      
+      "~/*" : ["*"],
+      "@components/*" : ["components/*"]
     },
   },
 }
