--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vueuse/components": "^10.7.0",
     "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
+    "card-validator": "^9.0.0",
     "cleave-zen": "^0.0.17",
     "google-oauth-gsi": "^4.0.0",
     "intl-tel-input": "^17.0.19",
