--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "axios": "^1.6.2",
     "card-validator": "^9.0.0",
     "cleave-zen": "^0.0.17",
+    "formidable": "^3.5.1",
     "google-oauth-gsi": "^4.0.0",
+    "h3-formidable": "^1.0.0",
     "intl-tel-input": "^17.0.19",
     "pinia": "^2.1.7",
     "tocbot": "^4.23.0",
