--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "intl-tel-input": "^17.0.19",
     "pinia": "^2.1.7",
     "tocbot": "^4.23.0",
+    "v3-infinite-loading": "^1.3.1",
     "vee-validate": "^4.12.2",
     "yup": "^1.3.2"
   }
