--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@sidebase/nuxt-auth": "^0.6.3-alpha.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/intl-tel-input": "^18.1.4",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.2",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.32",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.6",
@@ -24,10 +24,12 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.10",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@nuxt/image": "^1.1.0",
     "@pinia/nuxt": "^0.5.1",
+    "@sidebase/nuxt-auth": "^0.6.7",
     "@vee-validate/yup": "^4.12.2",
     "@vuepic/vue-datepicker": "^7.4.1",
     "@vueuse/components": "^10.7.0",
@@ -39,10 +41,12 @@
     "google-oauth-gsi": "^4.0.0",
     "h3-formidable": "^1.0.0",
     "intl-tel-input": "^17.0.19",
+    "lamejs": "^1.2.1",
     "pinia": "^2.1.7",
     "tocbot": "^4.23.0",
     "v3-infinite-loading": "^1.3.1",
     "vee-validate": "^4.12.2",
+    "wavesurfer.js": "^7.7.3",
     "yup": "^1.3.2"
   }
 }
