--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/ffmpeg.js": "^3.1.6",
     "@types/intl-tel-input": "^18.1.4",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.2",
