--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vuepic/vue-datepicker": "^7.4.1",
     "@vueuse/components": "^10.7.0",
     "@vueuse/core": "^10.7.0",
+    "@zoom/meetingsdk": "^3.1.6",
     "axios": "^1.6.2",
     "card-validator": "^9.0.0",
     "cleave-zen": "^0.0.17",
