--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
-    "@nuxt/image": "^1.1.0",
+    "@nuxt/image": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "@sidebase/nuxt-auth": "^0.6.7",
     "@vee-validate/yup": "^4.12.2",
@@ -45,6 +45,7 @@
     "intl-tel-input": "^17.0.19",
     "lamejs": "^1.2.1",
     "pinia": "^2.1.7",
+    "sharp": "^0.33.3",
     "tocbot": "^4.23.0",
     "v3-infinite-loading": "^1.3.1",
     "vee-validate": "^4.12.2",
