--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,7 +19,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: Deploy using ssh
-      uses: appleboy/ssh-action@master
+      uses: AbberSite/abber-frontend@main
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
