--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Deploy using ssh
+    - name: ABBER_FRONTEND
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.HOST }}
