--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,7 @@ jobs:
         port: 22
         script: |
           cd /abber-frontend
-          git pull origin master
+          git pull origin main
           git status
           
 
