--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,7 +19,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: ABBER_FRONTEND
-      uses: appleboy/ssh-action@v1.0.3
+      uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
@@ -28,6 +28,13 @@ jobs:
         script: |
           cd /abber-frontend
           git pull origin main
-          git status
+           - uses: actions/checkout@v2
+    - name: Use Node.js 20
+      uses: actions/setup-node@master
+      with:
+        node-version: 'latest'
+    - run: npm i
+    - run: npm i pm2 -g
+    - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
           
 
