--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,5 +36,6 @@ jobs:
     - run: npm i
     - run: npm i pm2 -g
     - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
+    - run: pm2 start ecosystem.config.cjs
           
 
