--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,8 +33,10 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 'latest'
+    - run: cd /abber-frontend
     - run: npm i
     - run: npm i pm2 -g
+    - run: pm2 kill
     - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
     - run: pm2 start ecosystem.config.cjs
           
