--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,15 +28,9 @@ jobs:
         script: |
           cd /abber-frontend
           git pull origin main
-    - uses: actions/checkout@v2
-    - name: Use Node.js 20
-      uses: actions/setup-node@master
-      with:
-        node-version: 'latest'
-    - run: npm i
-    - run: npm i pm2 -g
-    - run: pm2 kill
-    - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
-    - run: pm2 start ecosystem.config.cjs
+          npm i
+          npm i pm2 -g
+          pm2 kill
+    
           
 
