--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,13 +1,12 @@
-
 # This is a basic workflow to help you get started with Actions
 
 name: Node.js CD
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ main ]
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,27 +17,24 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: ABBER_FRONTEND
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.PRIVATE_KEY }}
-        port: 22
-        script: |
-          cd /abber-frontend
-          git pull origin main
-    - uses: actions/checkout@v2
-    - name: Use Node.js 20
-    - uses: actions/setup-node@master
-      with:
-        node-version: 'latest'
-    - run: ls
-    - run: npm i
-    - run: npm i pm2 -g
-    - run: pm2 kill
-    - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
-    - run: pm2 start ecosystem.config.cjs
-    
-          
-
+      - name: ABBER_FRONTEND
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          port: 22
+          script: |
+            cd /abber-frontend
+            git pull origin main
+      - uses: actions/checkout@v2
+      - name: Use Node.js 20
+        uses: actions/setup-node@master
+        with:
+          node-version: "latest"
+      - run: ls
+      - run: npm i
+      - run: npm i pm2 -g
+      - run: pm2 kill
+      - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
+      - run: pm2 start ecosystem.config.cjs
