--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Use Node.js 12
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@main
       with:
         node-version: 12.x
-    - run: npm i
-    - run: npm i pm2 -g
-    - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
+    - run: ls
+      - run: npm i
+      - run: npm i pm2 -g
+      - run: pm2 kill
+      - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
+      - run: pm2 start ecosystem.config.cjs
