--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
     - name: Use Node.js 12
       uses: actions/setup-node@main
       with:
-        node-version: 12.x
+        node-version: "latest"
     - run: ls
-      - run: npm i
-      - run: npm i pm2 -g
-      - run: pm2 kill
-      - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
-      - run: pm2 start ecosystem.config.cjs
+    - run: npm i
+    - run: npm i pm2 -g
+    - run: pm2 kill
+    - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
+    - run: pm2 start ecosystem.config.cjs
