--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
     - run: npm i pm2 -g
     - run: pm2 kill
     - run: ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
-    - run: pm2 start ecosystem.config.cjs
+    # - run: pm2 start ecosystem.config.cjs
