--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,6 +27,8 @@ jobs:
           script: |
             cd /abber-frontend
             git pull origin main
-                        node -v
+            export NVM_DIR=~/.nvm
+            source ~/.nvm/nvm.sh
+            npm --help
 
 
