--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,10 +30,18 @@ jobs:
             git pull origin main
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
-            npm i
-            npm i pm2 -g
             pm2 kill
-            ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" npm run build --if-present
-            ABBER_ENV=production NODE_OPTIONS="--max-old-space-size=900" pm2 start ecosystem.config.cjs
+
+      - uses: actions/checkout@v4
+      - name: Use Node.js 12
+        uses: actions/setup-node@main
+        with:
+          node-version: "latest"
+      - run: npm i
+      # - run: pm2 kill
+      - run: npm run build --if-present
+      - run: ls
+      # - run: pm2 start ecosystem.config.cjs
+
 
 
