--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,6 +42,19 @@ jobs:
       - run: npm run build --if-present
       - run: ls
       # - run: pm2 start ecosystem.config.cjs
+      - name: DeployStep
+      - uses: STDSuperman/deploy-files@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          user: ${{ secrets.SERVER_USER }}
+          port: '22'
+          password: ${{ secrets.SERVER_PASSWORD }}
+          targetPath: '/abber-frontend/.nuxt'
+          sourcePath: '.nuxt'
+          preCommands: |
+                     ls -a
+          commands: |
+                 ls -a
 
 
 
