--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,7 +43,7 @@ jobs:
       - run: ls
       # - run: pm2 start ecosystem.config.cjs
       - name: DeployStep
-      - uses: STDSuperman/deploy-files@master
+        uses: STDSuperman/deploy-files@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           user: ${{ secrets.SERVER_USER }}
