--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,7 +31,6 @@ jobs:
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             pm2 kill
-            tar -czvf nuxt_archive.tar.gz .output
 
 
       - uses: actions/checkout@v4
@@ -42,6 +41,7 @@ jobs:
       - run: npm i
       # - run: pm2 kill
       - run: npm run build --if-present
+      - run: tar -czvf nuxt_archive.tar.gz .output
       - run: ls
       # - run: pm2 start ecosystem.config.cjs
       - name: DeployStep
