--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,6 +31,7 @@ jobs:
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             pm2 kill
+            sudo rm -rf nuxt_archive.tar.gz
 
 
       - uses: actions/checkout@v4
@@ -41,7 +42,7 @@ jobs:
       - run: npm i
       # - run: pm2 kill
       - run: npm run build --if-present
-      - run: tar -czvf nuxt_archive.tar.gz .output
+      - run: tar -czvf /out/nuxt_archive.tar.gz .output
       - run: ls
       # - run: pm2 start ecosystem.config.cjs
       - name: DeployStep
@@ -52,7 +53,7 @@ jobs:
           port: '22'
           password: ${{ secrets.PASSWORD }}
           targetPath: '/abber-frontend'
-          sourcePath: 'nuxt_archive.tar.gz'
+          sourcePath: '/out'
           preCommands: |
                      ls -a
           commands: |
