--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,6 +39,8 @@ jobs:
         uses: actions/setup-node@main
         with:
           node-version: "latest"
+      - run: pwd
+
       - run: npm i
       # - run: pm2 kill
       - run: npm run build --if-present
