--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,7 +47,7 @@ jobs:
       - run: mkdir -p out
       - run: cd out
       - run: tar -czvf nuxt_archive.tar.gz /home/runner/work/abber-frontend/abber-frontend/.output
-      - run: ls
+      - run: ls /home/runner/work/abber-frontend/abber-frontend/out
       # - run: pm2 start ecosystem.config.cjs
       - name: DeployStep
         uses: STDSuperman/deploy-files@master
