--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,7 +44,10 @@ jobs:
       - run: npm i
       # - run: pm2 kill
       - run: npm run build --if-present
-      - run: tar -czvf nuxt_archive.tar.gz .output
+      - run: mkdir -p out
+      - run: cd out
+      - run: ls -a
+      - run: tar -czvf nuxt_archive.tar.gz /home/runner/work/abber-frontend/abber-frontend/.output
       # - run: pm2 start ecosystem.config.cjs
       - name: DeployStep
         uses: STDSuperman/deploy-files@master
@@ -54,7 +57,7 @@ jobs:
           port: '22'
           password: ${{ secrets.PASSWORD }}
           targetPath: '/abber-frontend'
-          sourcePath: 'nuxt_archive.tar.gz'
+          sourcePath: 'out'
           preCommands: |
                      ls -a
           commands: |
@@ -64,5 +67,4 @@ jobs:
            export NVM_DIR=~/.nvm
            source ~/.nvm/nvm.sh
            pm2 start ecosystem.config.cjs
-
 
