--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -45,9 +45,8 @@ jobs:
       # - run: pm2 kill
       - run: npm run build --if-present
       - run: mkdir -p out
-      - run: cd out
-      - run: ls -a
-      - run: tar -czvf nuxt_archive.tar.gz /home/runner/work/abber-frontend/abber-frontend/.output
+
+      - run: tar -czvf /out/nuxt_archive.tar.gz /home/runner/work/abber-frontend/abber-frontend/.output
       # - run: pm2 start ecosystem.config.cjs
       - name: DeployStep
         uses: STDSuperman/deploy-files@master
