--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,7 +46,7 @@ jobs:
       - run: npm run build --if-present
       - run: mkdir -p out
 
-      - run: tar -czvf out/nuxt_archive.tar.gz /home/runner/work/abber-frontend/abber-frontend/.output
+      - run: tar -czvf out/nuxt_archive.tar.gz .output
       # - run: pm2 start ecosystem.config.cjs
       - name: DeployStep
         uses: STDSuperman/deploy-files@master
