--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -81,5 +81,8 @@ jobs:
             tar -xzvf nuxt_archive.tar.gz
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
+            pm2 stop Abber
+            pm2 delete Abber            
+            ABBER_ENV=production pm2 start ecosystem.config.cjs
             ABBER_ENV=production pm2 restart all
 
