--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "tocbot": "^4.23.0",
     "v3-infinite-loading": "^1.3.1",
     "vee-validate": "^4.12.2",
+    "vue-dragscroll": "^4.0.5",
     "wavesurfer.js": "^7.7.3",
     "yup": "^1.3.2"
   }
