--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "card-validator": "^9.0.0",
     "cleave-zen": "^0.0.17",
     "ffmpeg.js": "^4.2.9003",
+    "filepond": "^4.31.1",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-image-preview": "^4.6.12",
     "formidable": "^3.5.1",
     "google-oauth-gsi": "^4.0.0",
     "h3-formidable": "^1.0.0",
@@ -54,6 +57,7 @@
     "v3-infinite-loading": "^1.3.1",
     "vee-validate": "^4.12.2",
     "vue-dragscroll": "^4.0.5",
+    "vue-filepond": "^7.0.4",
     "wavesurfer.js": "^7.7.3",
     "yup": "^1.3.2"
   }
