--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,12 +37,11 @@ jobs:
       - name: Use Node.js 12
         uses: actions/setup-node@main
         with:
-          node-version: "latest"
+          node-version: "22.4"
       - run: pwd
 
       - run: npm audit fix
       - run: npm i
-      - run: npm audit fix
       # - run: pm2 kill
       - run: |
           echo "ABBER_ENV='production'
