--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^42.0.1",
+    "@ckeditor/ckeditor5-vue": "^6.0.0",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@nuxt/image": "^1.2.0",
@@ -39,6 +41,7 @@
     "@zoom/meetingsdk": "^3.1.6",
     "axios": "^1.6.2",
     "card-validator": "^9.0.0",
+    "ckeditor5": "^42.0.1",
     "cleave-zen": "^0.0.17",
     "ffmpeg.js": "^4.2.9003",
     "filepond": "^4.31.1",
