--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@zoom/meetingsdk": "^3.1.6",
     "axios": "^1.6.2",
     "card-validator": "^9.0.0",
+    "chart.js": "^4.4.3",
     "ckeditor5": "^42.0.1",
     "cleave-zen": "^0.0.17",
     "ffmpeg.js": "^4.2.9003",
@@ -59,6 +60,7 @@
     "tocbot": "^4.23.0",
     "v3-infinite-loading": "^1.3.1",
     "vee-validate": "^4.12.2",
+    "vue-chartjs": "^5.3.1",
     "vue-dragscroll": "^4.0.5",
     "vue-filepond": "^7.0.4",
     "wavesurfer.js": "^7.7.3",
