--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Use Node.js 12
         uses: actions/setup-node@main
         with:
-          node-version: "22.4"
+          node-version: "latest"
       - run: pwd
 
       - run: npm audit fix
