--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,6 +42,9 @@ jobs:
 
       - run: npm audit fix
       - run: npm i
+      - run: npm audit fix
+      - run: npx update-browserslist-db@latest
+
       # - run: pm2 kill
       - run: |
           echo "ABBER_ENV='production'
