--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "debug": "nuxt dev --inspect"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.3.14",
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/i18n": "^8.3.1",
     "@tailwindcss/typography": "^0.5.10",
