--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           node-version: "20.11.1"
       - run: pwd
-      - run: rm -rf  package-lock.json
+      #- run: rm -rf  package-lock.json
 
       - run: npm i
 
