--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@zoom/meetingsdk": "^3.1.6",
     "axios": "^1.6.2",
     "card-validator": "^9.0.0",
+    "chart.js": "^4.4.9",
     "ckeditor5": "^42.0.1",
     "cleave-zen": "^0.0.17",
     "ffmpeg.js": "^4.2.9003",
