--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,8 +21,8 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          key: ${{ secrets.PRIVATE_KEY }}
           port: 22
           script: |
             cd /abber-frontend
@@ -66,7 +66,7 @@ jobs:
           targetPath: '/abber-frontend'
           sourcePath: 'out'
 
-          
+
       - name: ABBER_FRONTEND
         uses: appleboy/ssh-action@master
         with:
