--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "debug": "nuxt dev --inspect"
+    "debug": "nuxt dev --inspect",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:api": "vitest run tests/api/ tests/stores/settings.test.ts",
+    "test:api:watch": "vitest tests/api/ tests/stores/settings.test.ts",
+    "test:api:report": "tsx scripts/test-api.ts"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.14",
@@ -17,12 +23,15 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/ffmpeg.js": "^3.1.6",
     "@types/intl-tel-input": "^18.1.4",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.16",
+    "happy-dom": "^18.0.1",
     "nuxt": "^3.8.2",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.32",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.6",
+    "vitest": "^3.2.4",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
@@ -38,7 +47,6 @@
     "@vuepic/vue-datepicker": "^7.4.1",
     "@vueuse/components": "^10.7.0",
     "@vueuse/core": "^10.7.0",
-    "@zoom/meetingsdk": "^3.1.6",
     "axios": "^1.6.2",
     "card-validator": "^9.0.0",
     "chart.js": "^4.4.9",
