--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@nuxt/image": "^1.2.0",
+    "@nuxtjs/robots": "^5.4.0",
+    "@nuxtjs/sitemap": "^7.4.3",
     "@pinia/nuxt": "^0.5.1",
     "@sidebase/nuxt-auth": "^0.6.7",
     "@vee-validate/yup": "^4.12.2",
